# One-ops-NextGen

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLEANUP.md  MIGRATION.md  Makefile  RUNBOOK.md  docker-compose.v1.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  sonar-project.properties
DECISIONS/: ADR-0001-codec.md  ADR-0003-policy-engine.md  ADR-0004-checkpoint-store.md  ADR-0005-nats-topology.md
contracts/: agent-output.schema.json  ai-service-request.schema.json  error.schema.json  execution-plan.schema.json  execution-result.schema.json  final-response.schema.json  orchestrator-agent-input.schema.json  request-dto.schema.json  team-run-output.schema.json  tool-call-input.schema.json  tool-call-output.schema.json
data/itsm/: approval_policy.json  asset.json  catalog_item.json  change.json  cmdb_ci.json  group_role_map.json  incident.json  kb_knowledge.json  onboarding_template.json  problem.json  request.json  sys_user.json
database/: README.md
database/_foundation/: 01_extensions_schemas.sql  02_reference_tables.sql  README.md  load_reference_data.py
database/_lib/: _loader.py  _worker_base.py
database/_utils/: backfill_missing_managers.sql  gen_restore_sql.py  generate_itsm_data.py  restore_supabase.sql  seed_supabase.py  uc03_seed_password_reset_kb.py  uc08_seed_mfa_catalog.py  uc08_seed_onboarding_template.py
database/agent/: 01_schema.sql  02_embeddings.sql  README.md  sync.py  worker.py
database/catalog_fulfillment/: 01_schema.sql  02_embeddings.sql  03_fulfillment.sql  04_approval_policy.sql  05_group_role_map.sql  README.md  backfill.py  derive_intent_keywords.py  load_approval_policy.py  load_data.py  load_group_role_map.py  worker.py
database/conversation/: 01_schema.sql  README.md
database/incident/: 01_schema.sql  02_embeddings.sql  README.md  backfill.py  load_data.py  worker.py
database/kb/: 01_schema.sql  02_embeddings.sql  README.md  backfill.py  load_data.py  worker.py
database/request/: 01_schema.sql  02_embeddings.sql  README.md  backfill.py  load_data.py  worker.py
database/tool/: 01_schema.sql  README.md  sync.py
database/uc_schema/: 01_schema.sql  README.md  sync.py
dev/: dead-code-whitelist.py  freeze_stopwords.py  gen_proto.sh  migrate_registry_v2.py  verify_uc08_approval.py
docs/: 00_overview.md  BEHAVIOR_CORPUS.md  BUILD_STATUS.md  COMPONENT_SPEC.md  CONVENTIONS.md  MANAGEMENT-BRIEFING.html  MANAGEMENT-BRIEFING.md  PLATFORM-OPERATIONS.md  PROJECT-BRIEFING.md  agent-skills-spec.md  architecture_review.md  change-log.md  codebase-understanding.md  day1-execution-plan.md  engineering_standards.md  internal-cleanup-notes.md  manager-decision-package.md  phase-2-checklist.md  phase-status.md  pmg-coverage-gap-analysis.md  pmg-demo-runbook.md  production-maturity-plan.md  production-readiness-audit.md  production_gap_analysis.md  refactor-plan.md  refactor_roadmap.md  reference_repo_analysis.md  risk-register.md  system_architecture.md
docs/architecture/: ARCHITECTURE.md  CONVENTIONS.md  agent-skills-spec.md  router.md
docs/briefings/: MANAGEMENT-BRIEFING.md  PROJECT-BRIEFING.md  manager-decision-package.md
docs/decisions/: ADR-0002-vector-store.md  ADR-0004-checkpoint-store.md  ADR-0005-nats-topology.md
docs/design/: ambiguity-fix-package-v2.md  ambiguity-fix-package.md  entity-elicitation-slot-filling.md  phase-5-fan-out.md  routing-layer-architectural-review.md  slice-1-implementation-prep.md  uc08-approval-workflow.md
docs/findings/: 2026-05-18-component-1b-c4-ship.md  DEAD-CODE-AUDIT.md  family1-focus-pivot-2026-05-17.md  family3-ambiguous-referent-2026-05-17.md
docs/guides/: 00_overview.md  01_stack_components.md  02_uc_pack_structure.md  07_starting_steps.md  codebase-understanding.md
docs/history/: CLEANUP.md  MIGRATION.md  change-log.md  internal-cleanup-notes.md
docs/issues/: ISS-001-fake-cot-failure-mode.md  ISS-002-priority-order-not-honored.md  ISS-003-type-filter-hallucination.md  ISS-004-positional-ordinals-not-in-catalog.md  ISS-005-imperative-blocks-pronoun-detection.md  ISS-006-prompt-design-discipline.md  ISS-008-planner-over-routes-entity-dominant-rewrite.md  ISS-012-rerank-margin-gate-intra-vs-cross-uc.md  ISS-013-gate-a-low-confidence-novel-phrasings.md  README.md  (+3 more)
langgraph_docs/: 01_overview.md  02_graph_api.md  03_persistence.md  04_streaming.md  05_interrupts_human_in_loop.md  06_memory.md  07_workflows_agents.md  08_durable_execution.md  09_subgraphs.md  10_functional_api.md  11_observability.md  README.md
migrations/: 0001_conversation_events.sql  0002_itsm_schema.sql  0003_incident_request_embedding.sql  0004_embedding_substrate.sql  0005_kb_embedding_substrate.sql  0006_embedding_refresh_on_insert.sql  0007_uc08_fulfillment_substrate.sql  0008_widen_request_item_state_check.sql  0009_uc08_catalog_embeddings.sql
ops_v1/: collector.yaml  prometheus.yaml
registries/: agent-catalog-registry.json  agent-registry.json  agent-tool-mapping.json  capability-registry.json  role-permission-registry.json  router-alias-registry.json  service-registry.json  service-schema.json  tool-registry.json
scripts/: agent_doc2query.py  agent_overlap_report.py  backfill_embeddings.py  ci.sh  control_gate_eval.py  counter_example_eval.py  counter_examples.json  dump-logs.sh  generate_itsm_data.py  golden_routing_eval.py  load_itsm_data.py  multiagent_eval.py  registry_scale_bench.py  retrieval_eval.py  routing_consistency_devils.py  routing_eval.py  routing_eval100.py  routing_eval50.py  routing_eval_chat.py  routing_eval_fullfunnel.py  routing_eval_system100.py  routing_holdout_eval.py  sharpen_not_when.py  team_member_demo.py  uc01_summary_format_smoke.py  uc03_precision_eval.py  uc03_rerank_calibration.py  uc08_backfill_catalog_embeddings.py  uc08_seed_onboarding_template.py  uc_stream_devils_play.py
tests/: _verify_db_after_restore.py  conftest.py
tools/: freeze_stopwords.py  gen_proto.sh  gen_restore_sql.py  migrate_registry_v2.py  seed_incident_embeddings.py  seed_kb_embeddings.py  seed_supabase.py  seed_uc_capabilities.py  seed_uc_embeddings.py
(+515 files in other folders)
