[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oneops"
version = "0.1.0"
description = "OneOps AI Service — production multi-UC ITSM assistant on LangGraph"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # Orchestration
    "langgraph>=0.2.50",
    "langchain-core>=0.3.20",
    "langchain-openai>=0.2.10",
    "langgraph-checkpoint-postgres>=2.0.10",
    # LLM clients (route through gateway)
    "openai>=1.50",
    "httpx>=0.27",
    "tenacity>=8.5",
    # Messaging
    "nats-py>=2.9",
    # Observability — OTEL
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
    # Encoding
    "protobuf>=5.28",
    # Data / state
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "redis[hiredis]>=5.0",
    "asyncpg>=0.29",
    # Utility
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "orjson>=3.10",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "respx>=0.21",  # httpx mocking
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "grpcio-tools>=1.66",  # protoc bindings
]

[project.scripts]
oneops-graph = "oneops.entry.graph_service:main"
oneops-uc1 = "oneops.entry.uc_service:run_uc1"
oneops-uc3 = "oneops.entry.uc_service:run_uc3"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast, no external deps",
    "integration: requires dragonfly, nats, llm gateway",
    "stress: full-pipeline scenario tests",
    "slow: > 5s wall clock",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
timeout = 60

[tool.coverage.run]
source = ["src/oneops"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "PT", "PIE", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]  # asserts + test creds OK

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
